--- a/ART_MotorJig_New/ART_MotorJig_New.ioc
+++ b/ART_MotorJig_New/ART_MotorJig_New.ioc
@@ -1,23 +1,32 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C4.IPParameters=Timing
+I2C4.Timing=0x10909CEC
 KeepUserPlacement=false
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=UART4
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP2=I2C4
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=UART4
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PA14 (JTCK/SWCLK)
-Mcu.Pin11=PA15 (JTDI)
-Mcu.Pin12=VP_SYS_VS_tim7
+Mcu.Pin10=PB15
+Mcu.Pin11=PD12
+Mcu.Pin12=PD13
+Mcu.Pin13=PD14
+Mcu.Pin14=PA13 (JTMS/SWDIO)
+Mcu.Pin15=PA14 (JTCK/SWCLK)
+Mcu.Pin16=PA15 (JTDI)
+Mcu.Pin17=VP_SYS_VS_tim7
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
@@ -25,8 +34,8 @@ Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
-Mcu.Pin9=PA13 (JTMS/SWDIO)
-Mcu.PinsNb=13
+Mcu.Pin9=PB14
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
@@ -34,6 +43,7 @@ MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -46,6 +56,7 @@ NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.Locked=true
@@ -67,6 +78,12 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PB14.Locked=true
+PB14.Mode=Asynchronous
+PB14.Signal=USART1_TX
+PB15.Locked=true
+PB15.Mode=Asynchronous
+PB15.Signal=USART1_RX
 PC13.GPIOParameters=PinState
 PC13.Locked=true
 PC13.PinState=GPIO_PIN_RESET
@@ -75,6 +92,17 @@ PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PD12.Locked=true
+PD12.Mode=I2C
+PD12.Signal=I2C4_SCL
+PD13.Locked=true
+PD13.Mode=I2C
+PD13.Signal=I2C4_SDA
+PD14.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PD14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PD14.GPIO_PuPd=GPIO_PULLUP
+PD14.Locked=true
+PD14.Signal=GPXTI14
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
@@ -107,7 +135,7 @@ ProjectManager.StackSize=0x1400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_UART4_Init-UART4-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_UART4_Init-UART4-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C4_Init-I2C4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=50390625
 RCC.AHB12Freq_Value=160000000
 RCC.AHB4Freq_Value=160000000
@@ -186,6 +214,10 @@ RCC.VCO3OutputFreq_Value=100781250
 RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=781250
 RCC.VCOInput3Freq_Value=781250
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_tim7.Mode=TIM7
